Copy Update, and Meta Tag Change

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
 
   <title>Jaime Virgen</title>
-  <meta name="description" content="Jaime Virgen Website">
+  <meta name="description" content="Jaime Virgen Personal Website">
   <meta name="author" content="Jaime Virgen">
 
 </head>
 
 <body>
-  Hello Web World
+  Hello World Wide Web
 </body>
 </html>
