--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   <meta name="description" content="Jaime Virgen Website">
   <meta name="author" content="Jaime Virgen">
 
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 
 <body>
-  Hello World
+
+	<header class="page-header">
+    	<h1>JAIME VIRGEN</h1>
+	</header>
+
 </body>
 </html>
