Animating and Including Font Resources

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <meta name="author" content="Jaime Virgen">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/inter/inter.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 
 <body>
-
-	<header class="page-header">
+	<div class="page-header">
     	<h1>JAIME VIRGEN</h1>
-	</header>
+	</div>
 
 </body>
 </html>
