Menu Styling and Menu Linking placeholders

--- a/index.html
+++ b/index.html
@@ -16,9 +16,30 @@
 </head>
 
 <body>
-	<div class="page-header">
-    	<h1>TITLE CONTENT</h1>
+
+	<div class="toggle-content" id="navigation-menu">
+		<div class="menu-link-container">
+			<h1><a href="#">Selected Works</a></h1>
+			<h1><a href="#">Selected Works</a></h1>
+			<h1><a href="#">Selected Works</a></h1>
+			<h1><a href="#">Selected Works</a></h1>
+			<h1><a href="#">Selected Works</a></h1>
+			<h1><a href="#">Selected Works</a></h1>
+		</div>
 	</div>
 
+	<div class="page-header">
+    	<h1>JAIME VIRGEN</h1>
+	</div>
+
+	<div class="navigation">
+	  <input type="checkbox" class="checkbox" id="button-toggle">
+	  <label class="button" for="button-toggle"  onclick="myFunction()">
+	    <span class="icon">&nbsp;</span>
+	  </label>
+	</div>
+
+
+	<script src="js/main.js"></script>
 </body>
 </html>
