negative menu title and links

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 <body>
 
 	<div class="toggle-content" id="navigation-menu">
+
+		<h1 class="menu-title">JAIME VIRGEN</h1>
 		<div class="menu-link-container">
-			<h1><a href="#">Selected Works</a></h1>
-			<h1><a href="#">Selected Works</a></h1>
-			<h1><a href="#">Selected Works</a></h1>
-			<h1><a href="#">Selected Works</a></h1>
-			<h1><a href="#">Selected Works</a></h1>
-			<h1><a href="#">Selected Works</a></h1>
+			<h1><a href="https://github.com/jaimevirgen" target="_blank">GitHub</a></h1>
+			<h1><a href="https://www.linkedin.com/in/jaime-virgen-a22641b/" target="_blank">LinkedIn</a></h1>
+			<h1><a href="http://codecar.tel/" target="_blank">Code Cartel</a></h1>
 		</div>
 	</div>
 
