Thumbnail and styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <body>
 
 	<div class="toggle-content" id="navigation-menu">
-
 		<h1 class="menu-title">JAIME VIRGEN</h1>
 		<div class="menu-link-container">
 			<h1><a href="https://github.com/jaimevirgen" target="_blank">GitHub</a></h1>
@@ -36,6 +35,12 @@
 	  <label class="button" for="button-toggle"  onclick="myFunction()">
 	    <span class="icon">&nbsp;</span>
 	  </label>
+	</div>
+
+	<div class="thumbnail-container">
+		
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0001.jpg">&nbsp;</a></div>
+
 	</div>
 
 
