--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 	<div class="thumbnail-container">
 		
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0004.jpg">&nbsp;</a></div>
 		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0000.jpg">&nbsp;</a></div>
 		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0003.jpg">&nbsp;</a></div>
 		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0002.jpg">&nbsp;</a></div>
