--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
 
 	<div class="thumbnail-container">
 		
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0020.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0019.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0018.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0017.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0016.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0015.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0014.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0013.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0012.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0011.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0010.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0009.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0008.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0007.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0006.jpg">&nbsp;</a></div>
+		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0005.jpg">&nbsp;</a></div>
 		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0004.jpg">&nbsp;</a></div>
 		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0000.jpg">&nbsp;</a></div>
 		<div class="thumbnail"><a href="https://jaimevirgen-media.s3.amazonaws.com/IMG_0003.jpg">&nbsp;</a></div>
